# apriltag

./: .gitignore  CMakeLists.txt  Makefile  apriltag.c  apriltag.h  apriltag_quad_thresh.c  install.sh  tag36artoolkit.c  tag36h11.c  tagCircle21h7.c  tagCustom48h12.c
common/: doubles_floats_impl.h  image_u8.c  image_u8x3.c  image_u8x4.c  matd.c  matd.h  pam.c  pnm.c  time_util.c  timeprofile.h  unionfind.h  zarray.h  zhash.c  zmaxheap.c
debian/: README.Debian  README.source  changelog  control  copyright  libapriltag-dev.dirs  libapriltag-dev.install  libapriltags.cron.d.ex  libapriltags.default.ex  libapriltags.doc-base.EX  libapriltags3.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch
debian/patches/: 0001-Remove-Makefile.diff  0002-Fixes-version.diff  series
example/: apriltag_demo.c  opencv_demo.cc
